<resources>
    <string name="app_name">FoodHive</string>


    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome! please select an option below.</string>


    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="text_register">Register</string>
    <string name="name">Name</string>
    <string name="edit_name">enter name</string>
    <string name="email">Email</string>
    <string name="edit_email">email</string>
    <string name="password">Password</string>
    <string name="edit_password">password</string>
    <string name="text_allergens">Please tick a box if you are allergic to any of these:</string>
    <string name="nuts">Nuts</string>
    <string name="dairy">Dairy</string>
    <string name="gluten">Gluten</string>
    <string name="submit">Submit</string>


    <!-- Strings relateed to user detail page -->
    <string name="allergies">Allergies</string>
    <string name="users">users</string>

    <!-- related to login page -->


</resources>
