<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="168dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/edit_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxGluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="25dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAllergens"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewAllergens"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="12dp"
        android:text="@string/text_allergens"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxNuts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_username"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_register"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="99dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxNuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/nuts"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxDairy"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxDairy"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllergens" />

    <CheckBox
        android:id="@+id/checkBoxDairy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/dairy"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxGluten"
        app:layout_constraintStart_toStartOf="@+id/checkBoxGluten"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNuts" />

    <CheckBox
        android:id="@+id/checkBoxGluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="9dp"
        android:text="@string/gluten"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
        app:layout_constraintStart_toStartOf="@+id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDairy" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginBottom="7dp"
        android:text="@string/submit"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAllergens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGluten" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-159dp" />
</android.support.constraint.ConstraintLayout>